Adding python 3.7 support

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,12 @@
 # in multiple virtualenvs. This configuration file will run the
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
-# 
+#
 # To run different environments, try `tox -e py27` or `tox -e docs`
-# 
+#
 
 [tox]
-envlist = py27, py34, py35, py36
+envlist = py27, py34, py35, py36, py37
 
 [testenv]
 deps =
